Make sure we fire onchange also after selectedIndex was set to -1 through DOM. Thanks to Pablo Greco for helping fix this. b=317078 r+sr=roc