layout/forms/nsListControlFrame.cpp
@@ -1977,8 +1977,8 @@ nsListControlFrame::FireOnChange()
 {
   if (mComboboxFrame) {
     // Return hit without changing anything
-    PRInt32 index = mComboboxFrame->UpdateRecentIndex(-1);
-    if (index == -1)
+    PRInt32 index = mComboboxFrame->UpdateRecentIndex(NS_SKIP_NOTIFY_INDEX);
+    if (index == NS_SKIP_NOTIFY_INDEX)
       return;
 
     // See if the selection actually changed
@@ -2009,9 +2009,9 @@ NS_IMETHODIMP
 nsListControlFrame::OnSetSelectedIndex(PRInt32 aOldIndex, PRInt32 aNewIndex)
 {
   if (mComboboxFrame) {
-    // UpdateRecentIndex with -1, so that we won't fire an onchange
+    // UpdateRecentIndex with NS_SKIP_NOTIFY_INDEX, so that we won't fire an onchange
     // event for this setting of selectedIndex.
-    mComboboxFrame->UpdateRecentIndex(-1);
+    mComboboxFrame->UpdateRecentIndex(NS_SKIP_NOTIFY_INDEX);
   }
 
   ScrollToIndex(aNewIndex);
